Fixing index and set java to lower version